<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/texto"
            android:textColor="@color/blanco"
            android:textAlignment="center"
            android:elevation="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/text"
            android:background="@drawable/side_nav_bar"
            tools:targetApi="lollipop" />


        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nombreTer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Direccion" />

            <EditText
                android:id="@+id/alturaPoste"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Altura"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/terPoste"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Terminal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Zona"
                    android:id="@+id/zonaPoste"/>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:background="@drawable/side_nav_bar"
            android:id="@+id/consultar"/>

        <LinearLayout
            android:id="@+id/scroll"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imagen"
                android:layout_marginTop="8dp"
                android:elevation="10dp"
                android:background="@drawable/img_base"
                tools:targetApi="lollipop" />

            <Spinner
                android:id="@+id/SpinnerTipo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="10dp"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Direccion"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="@string/direccion"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/Altura"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="@string/altura"
                        android:inputType="number"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Distancia"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="Central"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/Zona"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="Zona"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Ter"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="Ter"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/Comentario"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/black"
                        android:hint="Comentario"
                        android:padding="10dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
